# tmp-uv-proj

./: .gitlab-ci.yml  install_from_git.py  main.py  pyproject.toml
.github/: Dockerfile-ci  build-image-ci.yaml
.github/workflows/: python-app.yml
libtmp/: pyproject.toml
projtmp/: README.md  main.py  pyproject.toml
