[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libtmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Глазов Николай", email = "n.glazov@infinet.ru" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
libtmp = "libtmp:main"

[tool.setuptools]

include-package-data = true

[tool.setuptools.package-data]
libtmp = ["shfiles/*"]
